[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Settings.gd" type="Script" id=2]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Settings" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="BackButton" type="Button" parent="."]
margin_left = 24.0
margin_top = 15.0
margin_right = 295.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "<- Back"

[node name="BGColor" type="Label" parent="."]
margin_left = 24.0
margin_top = 229.0
margin_right = 319.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 2 )
text = "Background Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
margin_left = 349.0
margin_top = 196.0
margin_right = 449.0
margin_bottom = 296.0
color = Color( 0.862745, 0.560784, 0.913725, 1 )

[node name="Easy" type="CheckBox" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = 11.0
margin_right = -125.0
margin_bottom = 61.0
focus_mode = 0
custom_constants/check_vadjust = 0
custom_constants/hseparation = 0
enabled_focus_mode = 0
text = "Easy"
align = 1

[node name="Medium" type="CheckBox" parent="."]
anchor_right = 0.5
anchor_bottom = 0.033
margin_left = 150.0
margin_top = 371.0
margin_bottom = 397.24
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Medium"

[node name="Hard" type="CheckBox" parent="."]
margin_left = 275.0
margin_top = 371.0
margin_right = 365.0
margin_bottom = 421.0
focus_mode = 0
enabled_focus_mode = 0
text = "Hard"

[node name="Volume" type="HSlider" parent="."]
anchor_left = 0.088
anchor_top = 0.793
anchor_right = 0.088
anchor_bottom = 0.793
margin_left = -17.24
margin_top = -55.96
margin_right = 216.76
margin_bottom = 5.03998
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 7

[node name="VolumeText" type="Label" parent="."]
margin_left = 295.0
margin_top = 529.0
margin_right = 419.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 2 )
text = "Volume"

[node name="VolNum" type="Label" parent="."]
margin_left = 43.0
margin_top = 588.0
margin_right = 145.0
margin_bottom = 627.0
custom_fonts/font = SubResource( 2 )
text = "100%"

[node name="VolSample" type="Button" parent="."]
margin_left = 183.0
margin_top = 576.0
margin_right = 419.0
margin_bottom = 660.0
custom_fonts/font = SubResource( 1 )
text = "Test"

[node name="SampleMusic" type="AudioStreamPlayer" parent="VolSample"]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="VolSample"]
wait_time = 2.0

[node name="Mute" type="CheckButton" parent="."]
margin_left = 89.0
margin_top = 480.0
margin_right = 165.0
margin_bottom = 520.0
focus_mode = 0
text = "Mute"
align = 1

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="popup_closed" from="ColorPickerButton" to="." method="_on_ColorPickerButton_popup_closed"]
[connection signal="toggled" from="Easy" to="." method="_on_Easy_toggled"]
[connection signal="toggled" from="Medium" to="." method="_on_Medium_toggled"]
[connection signal="toggled" from="Hard" to="." method="_on_Hard_toggled"]
[connection signal="value_changed" from="Volume" to="." method="_on_Volume_value_changed"]
[connection signal="pressed" from="VolSample" to="." method="_on_VolSample_pressed"]
[connection signal="timeout" from="VolSample/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Mute" to="." method="_on_Mute_pressed"]
